# js2rhai

./: Cargo.toml
src/: 2helps2b-score.js  2helps2b-score.rhai  main.rs
