[package]
name = "js2rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
boa_ast = "0.17.0"
boa_interner = "0.17.0"
boa_parser = "0.17.0"
proc-macro2 = { version = "1.0.66", default-features = false }
syn = { version = "2.0.30", features = [
    "full",
    "parsing",
    "printing",
    "extra-traits",
], default-features = false }
