[package]
name = "js2rhai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
boa_ast = "0.17.0"
boa_interner = "0.17.0"
boa_parser = "0.17.0"
rhai = { version = "1.15.1", features = ["internals"] }
smallvec = "1.11.0"
